--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 
         <div class="section-title">
           <h2>About</h2>
-          <p>I am currently a Post-doc in the Blackmon Lab at Texas A&M University. I'm an avid reader, creative crocheter, and DND player. My doctorate focused on identifying and incorporating alleles to improve wheat yield. My postdoc research now focuses on sex chomosome evolution.</p>
+          <p>I am currently a Post-doc in the Blackmon Lab at Texas A&M University studying sex chromosome evolution. I'm an avid reader, creative crocheter, and DND player. My doctorate focused on identifying and incorporating alleles to improve wheat yield.</p>
         </div>
 
         <div class="row">
@@ -93,26 +93,24 @@
             <img src="assets/img/profile-img.jpg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
-            <h3>UI/UX Designer &amp; Web Developer.</h3>
+            <h3>Plant Geneticist &amp; Bioinformatics.</h3>
             <p class="fst-italic">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-              magna aliqua.
+              Genetics is my passion. 
             </p>
             <div class="row">
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>1 May 1995</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>30 August 1995</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>www.example.com</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+123 456 7890</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>New York, USA</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>512-539-8654</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>College Station, TX</span></li>
                 </ul>
               </div>
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>30</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Master</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>PhEmailone:</strong> <span>email@example.com</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Freelance:</strong> <span>Available</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>27</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>PhD</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>PhEmailone:</strong> <span>priscilla_glenn@outlook.com</span></li>
                 </ul>
               </div>
             </div>
