--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
   <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
     <div class="hero-container" data-aos="fade-in">
       <h1>Priscilla Glenn</h1>
-      <p>I'm a<span class="typed" data-typed-items="Geneticist, Writer, Biologist,Runner"></span></p>
+      <p>I'm a <span class="typed" data-typed-items="Geneticist, Writer, Biologist,Runner"></span></p>
     </div>
   </section><!-- End Hero -->
 
@@ -253,16 +253,18 @@
             <h3 class="resume-title">Education</h3>
             <div class="resume-item">
               <h4>Doctorate of Horticulture &amp; Agronomy</h4>
-              <h5>2022</h5>
               <p><em>University of California at Davis, Davis, CA</em></p>
-              <p> Classes: MGT 290/298 - Food & Ag Industry Immersion/Exposure, PLS 222 - Advanced Plant Breeding, BIT 160 - Plant Biotechnology, GGG 201D - Quant & Population Genetics, PLS 220 - Genomics & Plant Biotech, PLS 222 - Advanced Plant Breeding,
+              <h5>2022</h5>
+			  <p> GPA 3.93/4.0
+              <p> <strong> Classes: </strong> MGT 290/298 - Food & Ag Industry Immersion/Exposure, PLS 222 - Advanced Plant Breeding, BIT 160 - Plant Biotechnology, GGG 201D - Quant & Population Genetics, PLS 220 - Genomics & Plant Biotech, PLS 222 - Advanced Plant Breeding,
 			  PLB 111 - Plant Physiology, PBI 220 - Plant Development, GGG 201B – Genomics, HRT 200 A/B - Hort & Agron: Principles/Practices, SSC 100 - Principles Soil Sci </p>
             </div>
             <div class="resume-item">
-              <h4>Bachelor of Fine Arts &amp; Graphic Design</h4>
-              <h5>2010 - 2014</h5>
-              <p><em>Rochester Institute of Technology, Rochester, NY</em></p>
-              <p>Quia nobis sequi est occaecati aut. Repudiandae et iusto quae reiciendis et quis Eius vel ratione eius unde vitae rerum voluptates asperiores voluptatem Earum molestiae consequatur neque etlon sader mart dila</p>
+              <h4>Bachelor of Biology &amp; Chemistry Minor</h4>
+              <p><em>Unviersity of Texas at Arlington, Arlington, TX</em></p>
+              <h5>2017</h5>
+			  <p>Graduated <em> Summa cum laude </em></p>
+              <p>GPA 3.92/4.0</p>
             </div>
           </div>
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
