Updating reumse section

--- a/index.html
+++ b/index.html
@@ -245,16 +245,13 @@
       <div class="container">
 
         <div class="section-title">
-          <h2>Resume</h2>
+          <h2>Education</h2>
         </div>
-
-        <div class="row">
-          <div class="col-lg-6" data-aos="fade-up">
-            <h3 class="resume-title">Education</h3>
+        <div class="row">        
             <div class="resume-item">
               <h4>Doctorate of Horticulture &amp; Agronomy</h4>
-              <p><em>University of California at Davis, Davis, CA</em></p>
               <h5>2022</h5>
+              <p><em>University of California at Davis, Davis, CA</em></p>		  
 			  <p> GPA 3.93/4.0
               <p> <strong> Classes: </strong> MGT 290/298 - Food & Ag Industry Immersion/Exposure, PLS 222 - Advanced Plant Breeding, BIT 160 - Plant Biotechnology, GGG 201D - Quant & Population Genetics, PLS 220 - Genomics & Plant Biotech, PLS 222 - Advanced Plant Breeding,
 			  PLB 111 - Plant Physiology, PBI 220 - Plant Development, GGG 201B – Genomics, HRT 200 A/B - Hort & Agron: Principles/Practices, SSC 100 - Principles Soil Sci </p>
@@ -267,34 +264,7 @@
               <p>GPA 3.92/4.0</p>
             </div>
           </div>
-          <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
-            <h3 class="resume-title">Professional Experience</h3>
-            <div class="resume-item">
-              <h4>Senior graphic design specialist</h4>
-              <h5>2019 - Present</h5>
-              <p><em>Experion, New York, NY </em></p>
-              <ul>
-                <li>Lead in the design, development, and implementation of the graphic, layout, and production communication materials</li>
-                <li>Delegate tasks to the 7 members of the design team and provide counsel on all aspects of the project. </li>
-                <li>Supervise the assessment of all graphic materials in order to ensure quality and accuracy of the design</li>
-                <li>Oversee the efficient use of production project budgets ranging from $2,000 - $25,000</li>
-              </ul>
-            </div>
-            <div class="resume-item">
-              <h4>Graphic design specialist</h4>
-              <h5>2017 - 2018</h5>
-              <p><em>Stepping Stone Advertising, New York, NY</em></p>
-              <ul>
-                <li>Developed numerous marketing programs (logos, brochures,infographics, presentations, and advertisements).</li>
-                <li>Managed up to 5 projects or tasks at a given time while under pressure</li>
-                <li>Recommended and consulted with clients on the most appropriate graphic design</li>
-                <li>Created 4+ design presentations and proposals a month for clients and account managers</li>
-              </ul>
-            </div>
-          </div>
         </div>
-
-      </div>
     </section><!-- End Resume Section -->
 
     <!-- ======= Portfolio Section ======= -->
