--- a/index.html
+++ b/index.html
@@ -249,8 +249,7 @@
         </div>
         <div class="row">        
             <div class="resume-item">
-              <h4>Doctorate of Horticulture &amp; Agronomy</h4>
-              <h5>2022</h5>
+              <h5>2022</h5> <h4>Doctorate of Horticulture &amp; Agronomy</h4>
               <p><em>University of California at Davis, Davis, CA</em></p>		  
 			  <p> GPA 3.93/4.0
               <p> <strong> Classes: </strong> MGT 290/298 - Food & Ag Industry Immersion/Exposure, PLS 222 - Advanced Plant Breeding, BIT 160 - Plant Biotechnology, GGG 201D - Quant & Population Genetics, PLS 220 - Genomics & Plant Biotech, PLS 222 - Advanced Plant Breeding,
