--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         <ul>
           <li><a href="#hero" class="nav-link scrollto active"><i class="bx bx-home"></i> <span>Home</span></a></li>
           <li><a href="#about" class="nav-link scrollto"><i class="bx bx-user"></i> <span>About</span></a></li>
-          <li><a href="#Education" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>Resume</span></a></li>
+          <li><a href="#Education" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>Education</span></a></li>
           <li><a href="#portfolio" class="nav-link scrollto"><i class="bx bx-book-content"></i> <span>Portfolio</span></a></li>
           <li><a href="#services" class="nav-link scrollto"><i class="bx bx-server"></i> <span>Services</span></a></li>
           <li><a href="#contact" class="nav-link scrollto"><i class="bx bx-envelope"></i> <span>Contact</span></a></li>
@@ -240,22 +240,22 @@
       </div>
     </section><!-- End Skills Section -->
 
-    <!-- ======= Resume Section ======= -->
-    <section id="resume" class="resume">
+    <!-- ======= Education Section ======= -->
+    <section id="Education" class="education">
       <div class="container">
 
         <div class="section-title">
           <h2>Education</h2>
         </div>
         <div class="row">        
-            <div class="resume-item">
+            <div class="education-item">
               <h5>2022</h5> <h4>Doctorate of Horticulture &amp; Agronomy</h4>
               <p><em>University of California at Davis, Davis, CA</em></p>		  
 			  <p> GPA 3.93/4.0
               <p> <strong> Classes: </strong> MGT 290/298 - Food & Ag Industry Immersion/Exposure, PLS 222 - Advanced Plant Breeding, BIT 160 - Plant Biotechnology, GGG 201D - Quant & Population Genetics, PLS 220 - Genomics & Plant Biotech, PLS 222 - Advanced Plant Breeding,
 			  PLB 111 - Plant Physiology, PBI 220 - Plant Development, GGG 201B – Genomics, HRT 200 A/B - Hort & Agron: Principles/Practices, SSC 100 - Principles Soil Sci </p>
             </div>
-            <div class="resume-item">
+            <div class="education-item">
               <h5>2017</h5>
 			  <h4>Bachelor of Biology &amp; Chemistry Minor</h4>
               <p><em>Unviersity of Texas at Arlington, Arlington, TX</em></p>
@@ -264,7 +264,7 @@
             </div>
           </div>
         </div>
-    </section><!-- End Resume Section -->
+    </section><!-- End Education Section -->
 
     <!-- ======= Portfolio Section ======= -->
     <section id="portfolio" class="portfolio section-bg">
