--- a/index.html
+++ b/index.html
@@ -84,8 +84,15 @@
       <div class="container">
 
         <div class="section-title">
-          <h2>About</h2>
-          <p>I am currently a Post-doc in the Blackmon Lab at Texas A&M University studying sex chromosome evolution. I'm an avid reader, creative crocheter, and DND player. My doctorate focused on identifying and incorporating alleles to improve wheat yield.</p>
+          <h2>About - Plant Geneticist/Agronomist</h2>
+          <p>Hi, my name is Dr. Priscilla Glenn and I am currently a Post-doc in the Blackmon Lab at Texas A&M University studying sex chromosome evolution and striving to improve my bioinformatic abilities. 
+		  I graduated with my doctorate from UC Davis and my research focused on identifying and incorporating alleles to improve wheat yield.
+		   I desire to uncover the connection between genetic variation, desirable phenotypic traits, and varying field environments. 
+			  Utilizing both tradition breeding methods and genomic selection, I am driven to apply these traits to advance genetic gain and phenotypic improvements to suit the grower’s needs. 
+			  After my postdoc, I am interested in working in the seed industry in a position which combines genetics, breeding, and/or field work. 
+
+		  
+		  </p>
         </div>
 
         <div class="row">
@@ -95,24 +102,21 @@
           <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
             <h3>Plant Geneticist &amp; Bioinformatics.</h3>
             <p class="fst-italic">
-              I desire to uncover the connection between genetic variation, desirable phenotypic traits, and varying field environments. 
-			  Utilizing both tradition breeding methods and genomic selection, I am driven to apply these traits to advance genetic gain and phenotypic improvements to suit the grower’s needs. 
-			  I am interested in working in the agriculture research sector in a position which combines genetics, breeding, and/or field work. 
-            </p>
+                         </p>
             <div class="row">
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>30 August 1995</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>www.example.com</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>512-539-8654</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>College Station, TX</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>priscilla_glenn@outlook.com</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>LinkedIn</strong> <span>https://www.linkedin.com/in/priscilla-d-glenn/</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Position</strong> <span>Postdoctoral Associate</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>City</strong> <span>College Station, TX</span></li>
                 </ul>
               </div>
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>27</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Hobbies</strong> <span> Crochet, Reading, DND, Board games, Video games </span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Interests </strong> <span>Dragons, Cats, King Arthur, Star Wars & Star Trek</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>PhD</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>priscilla_glenn@outlook.com</span></li>
                 </ul>
               </div>
             </div>
