--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
               <div class="col-lg-6">
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>priscilla_glenn@outlook.com</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>LinkedIn</strong> <span>https://www.linkedin.com/in/priscilla-d-glenn/</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>LinkedIn</strong> <span>www.linkedin.com/in/priscilla-d-glenn/</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Position</strong> <span>Postdoctoral Associate</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>City</strong> <span>College Station, TX</span></li>
                 </ul>
