--- a/index.html
+++ b/index.html
@@ -126,46 +126,24 @@
       </div>
     </section><!-- End About Section -->
 
-    <!-- ======= Facts Section ======= -->
-    <section id="facts" class="facts">
+    <!-- ======= Publications Section ======= -->
+    <section id="publications" class="publications">
       <div class="container">
 
         <div class="section-title">
-          <h2>Facts</h2>
-          <p>More text here.</p>
+          <h2>Publications</h2>
         </div>
-
+		<p>
+		
         <div class="row no-gutters">
 
-          <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up">
-            <div class="count-box">
-              <i class="bi bi-emoji-smile"></i>
-              <span data-purecounter-start="0" data-purecounter-end="232" data-purecounter-duration="1" class="purecounter"></span>
-              <p><strong>Happy Clients</strong> consequuntur quae</p>
-            </div>
-          </div>
-
           <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up" data-aos-delay="100">
-            <div class="count-box">
-              <i class="bi bi-journal-richtext"></i>
-              <span data-purecounter-start="0" data-purecounter-end="521" data-purecounter-duration="1" class="purecounter"></span>
-              <p><strong>Projects</strong> adipisci atque cum quia aut</p>
-            </div>
-          </div>
-
-          <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up" data-aos-delay="200">
-            <div class="count-box">
-              <i class="bi bi-headset"></i>
-              <span data-purecounter-start="0" data-purecounter-end="1453" data-purecounter-duration="1" class="purecounter"></span>
-              <p><strong>Hours Of Support</strong> aut commodi quaerat</p>
-            </div>
-          </div>
-
-          <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up" data-aos-delay="300">
-            <div class="count-box">
-              <i class="bi bi-people"></i>
-              <span data-purecounter-start="0" data-purecounter-end="32" data-purecounter-duration="1" class="purecounter"></span>
-              <p><strong>Hard Workers</strong> rerum asperiores dolor</p>
+		  <p> 1) <b> Glenn, P., </b> Zhang, J., Brown-Guedira, G., Dewitt, N., Cook, J. P., Li, K., Akhunov, E., & Dubcovsky, J. (2022). 
+		  Identification and characterization of a natural polymorphism in FT-A2 associated with increased number of grains per spike in wheat. 
+		  <i> Theoretical and Applied Genetics </i>, 135, 679–692. <a https://doi.org/10.1007/s00122-021-03992-y </a> </p>
+		  <p> 2) <b> Glenn, P., </b> Woods, D., Zhang, J., Odle, Natalie., Dubcovsky, J. 
+		  Identification of bZIPC1 as a protein interactor of FT2 that affects spikelet number per spike in wheat. 
+		  (in prep, <i> New Phytologist</i> )</p>
             </div>
           </div>
 
@@ -249,7 +227,8 @@
         </div>
         <div class="row">        
             <div class="education-item">
-              <h5>2022</h5> <h4>Doctorate of Horticulture &amp; Agronomy</h4>
+              <h5>2022</h5> 
+			  <h4>Doctorate of Horticulture &amp; Agronomy</h4>
               <p><em>University of California at Davis, Davis, CA</em></p>		  
 			  <p> GPA 3.93/4.0
               <p> <strong> Classes: </strong> MGT 290/298 - Food & Ag Industry Immersion/Exposure, PLS 222 - Advanced Plant Breeding, BIT 160 - Plant Biotechnology, GGG 201D - Quant & Population Genetics, PLS 220 - Genomics & Plant Biotech, PLS 222 - Advanced Plant Breeding,
