--- a/index.html
+++ b/index.html
@@ -136,8 +136,7 @@
 		<p>
 		
         <div class="row no-gutters">
-
-          <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up" data-aos-delay="100">
+          <div class="d-md-flex align-items-md-stretch" data-aos="fade-up" data-aos-delay="100">
 		  <p> 1) <b> Glenn, P., </b> Zhang, J., Brown-Guedira, G., Dewitt, N., Cook, J. P., Li, K., Akhunov, E., & Dubcovsky, J. (2022). 
 		  Identification and characterization of a natural polymorphism in FT-A2 associated with increased number of grains per spike in wheat. 
 		  <i> Theoretical and Applied Genetics </i>, 135, 679–692. <a https://doi.org/10.1007/s00122-021-03992-y </a> </p>
