--- a/index.html
+++ b/index.html
@@ -136,10 +136,10 @@
 		<p>
 		
         <div class="row no-gutters">
-          <div class="d-md-flex align-items-md-stretch" data-aos="fade-up" data-aos-delay="100">
+          <div class="align-items-md-stretch" data-aos="fade-up" data-aos-delay="100">
 		  <p> 1) <b> Glenn, P., </b> Zhang, J., Brown-Guedira, G., Dewitt, N., Cook, J. P., Li, K., Akhunov, E., & Dubcovsky, J. (2022). 
 		  Identification and characterization of a natural polymorphism in FT-A2 associated with increased number of grains per spike in wheat. 
-		  <i> Theoretical and Applied Genetics </i>, 135, 679–692. <a https://doi.org/10.1007/s00122-021-03992-y </a> </p>
+		  <i> Theoretical and Applied Genetics </i>, 135, 679–692. <a> https://doi.org/10.1007/s00122-021-03992-y </a> </p>
 		  <p> 2) <b> Glenn, P., </b> Woods, D., Zhang, J., Odle, Natalie., Dubcovsky, J. 
 		  Identification of bZIPC1 as a protein interactor of FT2 that affects spikelet number per spike in wheat. 
 		  (in prep, <i> New Phytologist</i> )</p>
