--- a/index.html
+++ b/index.html
@@ -100,13 +100,10 @@
             <img src="assets/img/About-img.jpg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
-            <h3>Plant Geneticist &amp; Bioinformatics.</h3>
-            <p class="fst-italic">
-                         </p>
             <div class="row">
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-left"></i> <strong>Email:</strong> <span>priscilla_glenn@outlook.com</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>priscilla_glenn@outlook.com</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>LinkedIn</strong> <span>www.linkedin.com/in/priscilla-d-glenn/</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Position</strong> <span>Postdoctoral Associate</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>City</strong> <span>College Station, TX</span></li>
