--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
               </div>
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Hobbies</strong> Crochet, Reading, DND, Board games, Video games</li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Hobbies</strong> <span> Crochet, Reading, DND, Board games, Video games</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Interests </strong> <span>Dragons, Cats, King Arthur, Star Wars & Star Trek</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>City</strong> <span>College Station, TX</span></li>
                 </ul>
@@ -150,71 +150,6 @@
 
     </section><!-- End Facts Section -->
 
-    <!-- ======= Skills Section ======= -->
-    <section id="skills" class="skills section-bg">
-      <div class="container">
-
-        <div class="section-title">
-          <h2>Skills</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
-        </div>
-
-        <div class="row skills-content">
-
-          <div class="col-lg-6" data-aos="fade-up">
-
-            <div class="progress">
-              <span class="skill">HTML <i class="val">100%</i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
-              </div>
-            </div>
-
-            <div class="progress">
-              <span class="skill">CSS <i class="val">90%</i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
-              </div>
-            </div>
-
-            <div class="progress">
-              <span class="skill">JavaScript <i class="val">75%</i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
-              </div>
-            </div>
-
-          </div>
-
-          <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
-
-            <div class="progress">
-              <span class="skill">PHP <i class="val">80%</i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
-              </div>
-            </div>
-
-            <div class="progress">
-              <span class="skill">WordPress/CMS <i class="val">90%</i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
-              </div>
-            </div>
-
-            <div class="progress">
-              <span class="skill">Photoshop <i class="val">55%</i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="55" aria-valuemin="0" aria-valuemax="100"></div>
-              </div>
-            </div>
-
-          </div>
-
-        </div>
-
-      </div>
-    </section><!-- End Skills Section -->
 
     <!-- ======= Education Section ======= -->
     <section id="Education" class="education">
@@ -225,17 +160,17 @@
         </div>
         <div class="row">        
             <div class="education-item">
-              <h5>2022</h5> 
+              <h5><strong>2022</strong></h5> 
 			  <h4>Doctorate of Horticulture &amp; Agronomy</h4>
               <p><em>University of California at Davis, Davis, CA</em></p>		  
-			  <p> GPA 3.93/4.0
+			  <p> GPA 3.93/4.0 </p>
               <p> <strong> Classes: </strong> MGT 290/298 - Food & Ag Industry Immersion/Exposure, PLS 222 - Advanced Plant Breeding, BIT 160 - Plant Biotechnology, GGG 201D - Quant & Population Genetics, PLS 220 - Genomics & Plant Biotech, PLS 222 - Advanced Plant Breeding,
 			  PLB 111 - Plant Physiology, PBI 220 - Plant Development, GGG 201B – Genomics, HRT 200 A/B - Hort & Agron: Principles/Practices, SSC 100 - Principles Soil Sci </p>
             </div>
             <div class="education-item">
-              <h5>2017</h5>
-			  <h4>Bachelor of Biology &amp; Chemistry Minor</h4>
-              <p><em>Unviersity of Texas at Arlington, Arlington, TX</em></p>
+              <h5><strong>2017</strong></h5>
+			  <h4>Bachelor of Biology & Chemistry Minor</h4>
+              <p><em>University of Texas at Arlington, Arlington, TX</em></p>
   			  <p>Graduated <em> Summa cum laude </em></p>
               <p>GPA 3.92/4.0</p>
             </div>
