--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Dr. Priscilla Glenn's website</title>
+  <title>Dr. Priscilla Glenn</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -101,14 +101,14 @@
           </div>
           <div class="col-lg-9 pt-4 pt-lg-0 content" data-aos="fade-left">
             <div class="row">
-              <div class="col-lg-6">
+              <div class="col-lg-5">
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>priscilla_glenn@outlook.com</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>LinkedIn</strong> <span>www.linkedin.com/in/priscilla-d-glenn/</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Position</strong> <span> A&M Postdoctoral Associate</span></li>
                 </ul>
               </div>
-              <div class="col-lg-6">
+              <div class="col-lg-7">
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Hobbies</strong> <span> Crochet, Reading, DND, Board games, Video games</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Interests </strong> <span>Dragons, Cats, King Arthur, Star Wars & Star Trek</span></li>
@@ -162,18 +162,17 @@
             <div class="education-item">
               <h5><strong>2022</strong></h5> 
 			  <h4>Doctorate of Horticulture &amp; Agronomy</h4>
-              <p><em>University of California at Davis, Davis, CA</em></p>		  
-			  <p> GPA 3.93/4.0 </p>
+              <p><em>University of California at Davis, Davis, CA</em><br> GPA 3.93/4.0</p>		  
               <p> <strong> Classes: </strong> MGT 290/298 - Food & Ag Industry Immersion/Exposure, PLS 222 - Advanced Plant Breeding, BIT 160 - Plant Biotechnology, GGG 201D - Quant & Population Genetics, PLS 220 - Genomics & Plant Biotech, PLS 222 - Advanced Plant Breeding,
 			  PLB 111 - Plant Physiology, PBI 220 - Plant Development, GGG 201B – Genomics, HRT 200 A/B - Hort & Agron: Principles/Practices, SSC 100 - Principles Soil Sci </p>
             </div>
+			<br>
             <div class="education-item">
               <h5><strong>2017</strong></h5>
 			  <h4>Bachelor of Biology & Chemistry Minor</h4>
-              <p><em>University of Texas at Arlington, Arlington, TX</em></p>
-  			  <p>Graduated <em> Summa cum laude </em></p>
-              <p>GPA 3.92/4.0</p>
-            </div>
+              <p><em>University of Texas at Arlington, Arlington, TX</em> <br> Graduated <em> Summa cum laude </em> <br> GPA 3.92/4.0
+			  </p>
+			  </div>
           </div>
         </div>
     </section><!-- End Education Section -->
