--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
           </div>
           <div class="col-lg-9 pt-4 pt-lg-0 content" data-aos="fade-left">
             <div class="row">
-              <div class="col-lg-5">
+              <div class="col-lg-5 margin">
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>priscilla_glenn@outlook.com</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>LinkedIn</strong> <span>www.linkedin.com/in/priscilla-d-glenn/</span></li>
