--- a/index.html
+++ b/index.html
@@ -100,8 +100,8 @@
             <img src="assets/img/About-img.jpg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-9 pt-4 pt-lg-0 content" data-aos="fade-left">
-            <div class="row">
-              <div class="col-lg-5 margin">
+            <div class="row margin">
+              <div class="col-lg-5">
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>priscilla_glenn@outlook.com</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>LinkedIn</strong> <span>www.linkedin.com/in/priscilla-d-glenn/</span></li>
