--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@
             <p class="description">Analyzed gene expression data from Tribolium beetles to determine if it supports meiotic sex chromosome inactivation</p>
           </div>
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="500">
-            <div class="icon"><i class="bi fire"></i></div> 
+            <div class="icon"><i class="bi bi-fire"></i></div> 
             <h4 class="title"><a href="">Fire Blight</a></h4>
             <p class="description">Determined if Fire Blight was attractive to D. Melanogaster and 
 			set up procedure for future experiments for other potential FB vectors</p>
