--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
           <li><a href="#hero" class="nav-link scrollto active"><i class="bx bx-home"></i> <span>Home</span></a></li>
           <li><a href="#about" class="nav-link scrollto"><i class="bx bx-user"></i> <span>About</span></a></li>
           <li><a href="#Education" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>Education</span></a></li>
-          <li><a href="#Research" class="nav-link scrollto"><i class="bx bx-book-content"></i> <span>Research</span></a></li>
+          <li><a href="#Research" class="nav-link scrollto"><i class="bx bx-book-content"></i> <span>Services</span></a></li>
           <li><a href="#Skills" class="nav-link scrollto"><i class="bx bx-server"></i> <span>Skills</span></a></li>
           <li><a href="#Presentations" class="nav-link scrollto"><i class="bx bx-envelope"></i> <span>Presentations</span></a></li>
         </ul>
@@ -208,7 +208,7 @@
           </div>
 		  <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="200">
             <div class="icon"><i class="bi bi-bar-chart"></i></div>
-            <h4 class="title">BASF Breeding Intern</h4>
+            <h4 class="title">BASF Breeding Intern (Summer 2021)</h4>
             <p class="description">Experienced broad-based exposure to the day-to-day activities of the BASF hybrid-wheat research program.</p>
           </div>
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="300">
@@ -230,7 +230,7 @@
           </div>
 		  <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="500">
             <div class="icon"><i class="bi bi-calendar4-week"></i></div>
-            <h4 class="title"><a href="">Maize Ribo-seq (Summer 2015)</a></h4>
+            <h4 class="title">Maize Ribo-seq (Summer 2015)</h4>
             <p class="description">Analyzed Ribosome profiling data and RNA-seq data in Maize to 
 			determine the translational efficiency of genes related to C4 photosynthesis.</p>
           </div>
