--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
           <li><a href="#hero" class="nav-link scrollto active"><i class="bx bx-home"></i> <span>Home</span></a></li>
           <li><a href="#about" class="nav-link scrollto"><i class="bx bx-user"></i> <span>About</span></a></li>
           <li><a href="#Education" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>Education</span></a></li>
-          <li><a href="#Services" class="nav-link scrollto"><i class="bx bx-book-content"></i> <span>Ressearch Experience</span></a></li>
+          <li><a href="#Research Experience" class="nav-link scrollto"><i class="bx bx-book-content"></i> <span>Research Experience</span></a></li>
           <li><a href="#Skills" class="nav-link scrollto"><i class="bx bx-server"></i> <span>Skills</span></a></li>
           <li><a href="#Presentations" class="nav-link scrollto"><i class="bx bx-envelope"></i> <span>Presentations</span></a></li>
         </ul>
