--- a/index.html
+++ b/index.html
@@ -61,7 +61,9 @@
           <li><a href="#hero" class="nav-link scrollto active"><i class="bx bx-home"></i> <span>Home</span></a></li>
           <li><a href="#about" class="nav-link scrollto"><i class="bx bx-user"></i> <span>About</span></a></li>
           <li><a href="#Education" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>Education</span></a></li>
-          <li><a href="#Research Experience" class="nav-link scrollto"><i class="bx bx-book-content"></i> <span>Research Experience</span></a></li>
+          <li><a href="#Research" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>Research</span></a></li>
+          <li><a href="#Publications" class="nav-link scrollto"><i class="bx bx-server"></i> <span>Publications</span></a></li>
+
           <li><a href="#Skills" class="nav-link scrollto"><i class="bx bx-server"></i> <span>Skills</span></a></li>
           <li><a href="#Presentations" class="nav-link scrollto"><i class="bx bx-envelope"></i> <span>Presentations</span></a></li>
         </ul>
@@ -122,36 +124,7 @@
       </div>
     </section><!-- End About Section -->
 
-    <!-- ======= Publications Section ======= -->
-    <section id="publications" class="publications">
-      <div class="container">
-
-        <div class="section-title">
-          <h2>Publications</h2>
-		  <p>
-		  <a = href="https://scholar.google.com/citations?hl=en&user=bZrCKpYAAAAJ" target="_blank"> Google Scholar </a>
-		  </p>
-        </div>
-		
-        <div class="row no-gutters">
-          <div class="align-items-md-stretch" data-aos="fade-up" data-aos-delay="100">
-		  <p> 1) <b> Glenn, P., </b> Zhang, J., Brown-Guedira, G., Dewitt, N., Cook, J. P., Li, K., Akhunov, E., & Dubcovsky, J. (2022). 
-		  Identification and characterization of a natural polymorphism in FT-A2 associated with increased number of grains per spike in wheat. 
-		  <i> Theoretical and Applied Genetics </i>, 135, 679–692. <a href="https://doi.org/10.1007/s00122-021-03992-y" target="_blank"> 
-		  https://doi.org/10.1007/s00122-021-03992-y </a> 
-		  </p>
-		  <p> 2) <b> Glenn, P., </b> Woods, D., Zhang, J., Odle, Natalie., Dubcovsky, J. 
-		  Identification of bZIPC1 as a protein interactor of FT2 that affects spikelet number per spike in wheat. 
-		  (in prep, <i> New Phytologist</i> )</p>
-            </div>
-          </div>
-
-        </div>
-
-    </section><!-- End Facts Section -->
-
-
-    <!-- ======= Education Section ======= -->
+     <!-- ======= Education Section ======= -->
     <section id="Education" class="education">
       <div class="container">
 
@@ -160,16 +133,17 @@
         </div>
         <div class="row">        
             <div class="education-item">
-              <h5><strong>2022</strong></h5> 
-			  <h4>Doctorate of Horticulture &amp; Agronomy</h4>
+              <h4><strong>2022</strong></h4> 
+			  <h3>Doctorate of Horticulture &amp; Agronomy</h3>
               <p><em>University of California at Davis, Davis, CA</em><br> GPA 3.93/4.0</p>		  
               <p> <strong> Classes: </strong> MGT 290/298 - Food & Ag Industry Immersion/Exposure, PLS 222 - Advanced Plant Breeding, BIT 160 - Plant Biotechnology, GGG 201D - Quant & Population Genetics, PLS 220 - Genomics & Plant Biotech, PLS 222 - Advanced Plant Breeding,
 			  PLB 111 - Plant Physiology, PBI 220 - Plant Development, GGG 201B – Genomics, HRT 200 A/B - Hort & Agron: Principles/Practices, SSC 100 - Principles Soil Sci </p>
             </div>
-			<br>
+			<p></p>
+			<p></p>
             <div class="education-item">
-              <h5><strong>2017</strong></h5>
-			  <h4>Bachelor of Biology & Chemistry Minor</h4>
+              <h4><strong>2017</strong></h4>
+			  <h3>Bachelor of Biology & Chemistry Minor</h3>
               <p><em>University of Texas at Arlington, Arlington, TX</em> <br> Graduated <em> Summa cum laude </em> <br> GPA 3.92/4.0
 			  </p>
 			  </div>
@@ -180,7 +154,7 @@
 
 
     <!-- ======= Research Experience Section ======= -->
-    <section id="services" class="services">
+    <section id="Research" class="services">
       <div class="container">
 
         <div class="section-title">
@@ -196,7 +170,8 @@
 			Comparing mammalian PAR size and aneuploidy rates. </p>
           </div>
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="100">
-            <div class="icon"><i class="bi bi-card-checklist"></i></div>
+            <!--div class="icon"><i class="bi bi-card-checklist"></i></div-->
+			<image class="icon" src="/assets/img/icons/wheat.png"/>
             <h4 class="title">FT-A2 (2017-2022)</h4>
             <p class="description">Improved wheat yield potential by identifying, characterizing, and incorporating an 
 			FT2 allele for increased grain number.</p>
@@ -239,7 +214,33 @@
       </div>
     </section><!-- End Research Section -->
 
- 
+ <!-- ======= Publications Section ======= -->
+    <section id="Publications" class="publications">
+      <div class="container">
+
+        <div class="section-title">
+          <h2>Publications</h2>
+		  <p>
+		  <a = href="https://scholar.google.com/citations?hl=en&user=bZrCKpYAAAAJ" target="_blank"> Google Scholar </a>
+		  </p>
+        </div>
+		
+        <div class="row no-gutters">
+          <div class="align-items-md-stretch" data-aos="fade-up" data-aos-delay="100">
+		  <p> 1) <b> Glenn, P., </b> Zhang, J., Brown-Guedira, G., Dewitt, N., Cook, J. P., Li, K., Akhunov, E., & Dubcovsky, J. (2022). 
+		  Identification and characterization of a natural polymorphism in FT-A2 associated with increased number of grains per spike in wheat. 
+		  <i> Theoretical and Applied Genetics </i>, 135, 679–692. <a href="https://doi.org/10.1007/s00122-021-03992-y" target="_blank"> 
+		  https://doi.org/10.1007/s00122-021-03992-y </a> 
+		  </p>
+		  <p> 2) <b> Glenn, P., </b> Woods, D., Zhang, J., Odle, Natalie., Dubcovsky, J. 
+		  Identification of bZIPC1 as a protein interactor of FT2 that affects spikelet number per spike in wheat. 
+		  (in prep, <i> New Phytologist</i> )</p>
+            </div>
+          </div>
+
+        </div>
+
+    </section><!-- End Facts Section -->
 
   </main><!-- End #main -->
 
