--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
 
         <div class="row">
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up">
-            <div class="icon"><i class="bi bi-briefcase"></i></div>
+            <image class="icon" src="/assets/img/icons/dna2.png"/>
             <h4 class="title">Chromsome Evolution (2023-Present)</h4>
             <p class="description">Utilizing HiFi sequence data to assemble various beetle genomes for Synteny analysis.
 			Comparing mammalian PAR size and aneuploidy rates. </p>
@@ -177,34 +177,34 @@
 			FT2 allele for increased grain number.</p>
           </div>
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="200">
-            <div class="icon"><i class="bi bi-bar-chart"></i></div>
+            <image class="icon" src="/assets/img/icons/dna1.png"/>
             <h4 class="title">bZIPC1 (2020-2022)</h4>
             <p class="description">Discovered and characterized bZIPC1, the first known interactor with FT2.</p>
           </div>
 		  <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="200">
-            <div class="icon"><i class="bi bi-bar-chart"></i></div>
+            <image class="icon" src="/assets/img/icons/farmer.png"/>
             <h4 class="title">BASF Breeding Intern (Summer 2021)</h4>
             <p class="description">Experienced broad-based exposure to the day-to-day activities of the BASF hybrid-wheat research program.</p>
           </div>
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="300">
-            <div class="icon"><i class="bi bi-binoculars"></i></div>
+            <image class="icon" src="/assets/img/icons/health-increase.png"/>
             <h4 class="title">Iron & Zinc Pasta Levels (2019-2020)</h4>
             <p class="description">Analyzed seed and pasta end-use quality of lines containing a novel 
 			gene which improved iron and zinc levels without hindering yield nor pasta quality.</p>
           </div>
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="400">
-            <div class="icon"><i class="bi bi-brightness-high"></i></div>
+            <image class="icon" src="/assets/img/icons/beetle-shell.png"/>
             <h4 class="title">MSCI (2014-2017)</h4>
             <p class="description">Analyzed gene expression data from Tribolium beetles to determine if it supports meiotic sex chromosome inactivation</p>
           </div>
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="500">
-            <div class="icon"><i class="bi bi-fire"></i></div> 
+            <image class="icon" src="/assets/img/icons/fire.png"/> 
             <h4 class="title">Fire Blight (Summer 2016)</h4>
             <p class="description">Determined if Fire Blight was attractive to D. Melanogaster and 
 			set up procedure for future experiments for other potential FB vectors</p>
           </div>
 		  <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="500">
-            <div class="icon"><i class="bi bi-calendar4-week"></i></div>
+            <image class="icon" src="/assets/img/icons/corn.png"/>
             <h4 class="title">Maize Ribo-seq (Summer 2015)</h4>
             <p class="description">Analyzed Ribosome profiling data and RNA-seq data in Maize to 
 			determine the translational efficiency of genes related to C4 photosynthesis.</p>
